[#3028] Fix for dropdown button extending too long for long label contexts

--- a/ckan/public/base/less/dashboard.less
+++ b/ckan/public/base/less/dashboard.less
@@ -25,7 +25,9 @@
 	.btn {
 		font-weight: normal;
 		strong {
-			max-width: 50px;
+			display: inline-block;
+			white-space: nowrap;
+			max-width: 100px;
 			overflow: hidden;
 			text-overflow: ellipsis;
 		}
